# fast-api

./: .black  Makefile  pyproject.toml
app/: main.py
fast-api/: app.py  index.html  main.py
