[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "environs>=14.2.0",
    "fastapi[all]>=0.115.14",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.35.0",
]
